hermes_fuzz_executed_few_shot_v2/fuzz_69_execution
'use strict';
(function () {
    [new a()];
    function a() { }
    var _a;
})();
 
 
'use strict';
var X;
(function () {
    Object.defineProperty(X, "", {
        get: function () { }
    });
})();

```

Running the app on hermes-inspector on Android will open Chrome with the dev tools on on a 512x384 screen.  If you install Chrome canary or an earlier release from the website, you should be able to use the regular Android emulator to test on a non-hermes environment.

## Platform Support

Hermes for Android is currently implemented for Android 5.0 or newer. If you do not have an emulated Android, you can enable Hermes on older versions by installing the [Hermes Inspector and the Android SDK. ](https: 

If you'd like to run Hermes on an Android emulator, please see this issue thread: https://github.com/facebook/hermes-inspector/issues/586

## Contributing

In addition to the [Hermes Developer Guide](https://github.com/facebook/hermes/blob/master/DeveloperGuide.md), there's [a helpful guide](https: 

## Questions?

If you have any questions regarding the Hermes documentation, please [open an issue](https: 

## License
This project is released under the MIT license found in the [LICENSE](LICENSE).



Execution Output ------------------:
test.js:38:1: error: non-terminated template literal

^
test.js:17:3: note: template literal started here
```
  ^
test.js:38:1: error: invalid expression

^
